--- a/zh/search/index.html
+++ b/zh/search/index.html
@@ -138,8 +138,7 @@
   <main>
 <div class="container content">
   <h2 id="站内检索">站内检索</h2>
-<p>请直接在下方的输入框中输入你想要搜索的内容
-<br /></p>
+<p>请直接在下方的输入框中输入你想要搜索的内容</p>
 <link href="/search/pagefind-ui.css" rel="stylesheet">
 <script src="/search/pagefind-ui.js" type="text/javascript"></script>
 
